--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,12 +50,12 @@
     }
 
     &.btn--primary {
-        color: color(white);
+        color: color('white');
         background-color: color(medium-slate-blue);
         border: 1px solid color(medium-slate-blue);
         
         &:not(:disabled):hover {
-            background-color: color(medium-slate-blue);
+            background-color: color(selective-yellow);
             border: 1px solid color(medium-slate-blue);
             color: color(dark-slate-blue);
             cursor: pointer;
@@ -79,7 +79,7 @@
     }
     
     &:checked + label {
-        border: 3px solid color(medium-slate-blue);
+        border: 3px solid color(selective-yellow);
         border-radius: 5px;
         opacity: 1;
     }
@@ -173,7 +173,7 @@
     z-index: 1000;
 
     .popup {
-        background-color: color(white);
+        background-color: color('white');
         position: relative;
         width: 55vw;
         max-width: 650px;
@@ -181,7 +181,7 @@
         min-height: 250px;
         max-height: 400px;
         border-radius: 5px;
-        color: color(black);
+                color: color(black);
         @include positionFlex(column, center, center);
 
         @include respond-to('tablet') {
